--- a/index.html
+++ b/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <link rel="stylesheet" href="calculator.css" />
+    <link rel="stylesheet" href="css/calculator.css" />
     <title>Calculator with Javascript</title>
   </head>
   <body>
     <!-- Challenge du Weekend calculatrice -->
-    <h2>Creation de depot..</h2>
+    <div class="js_calculator">
+      <form name="calc" class="calculator">
+        <input type="text" class="value" name="txt" readonly="" />
+        <span class="num o-para" onclick="document.calc.txt.value +='('"
+          >(</span
+        >
+        <span class="num c-para" onclick="document.calc.txt.value +=')'"
+          >)</span
+        >
+        <span class="num percent" onclick="document.calc.txt.value +='1/100'"
+          >%</span
+        >
+        <span class="num ac" onclick="document.calc.txt.value +=''">AC</span>
+        <span class="num" onclick="document.calc.txt.value +='7'">7</span>
+        <span class="num" onclick="document.calc.txt.value +='8'">8</span>
+        <span class="num" onclick="document.calc.txt.value +='9'">9</span>
+        <span class="num div" onclick="document.calc.txt.value +='/'">÷</span>
+        <span class="num" onclick="document.calc.txt.value +='4'">4</span>
+        <span class="num" onclick="document.calc.txt.value +='5'">5</span>
+        <span class="num" onclick="document.calc.txt.value +='6'">6</span>
+        <span class="num multi" onclick="document.calc.txt.value +='*'">×</span>
+        <span class="num" onclick="document.calc.txt.value +='1'">1</span>
+        <span class="num" onclick="document.calc.txt.value +='2'">2</span>
+        <span class="num" onclick="document.calc.txt.value +='3'">3</span>
+        <span class="num moins" onclick="document.calc.txt.value +='-'">-</span>
+        <span class="num" onclick="document.calc.txt.value +='0'">0</span>
+        <span class="num" onclick="document.calc.txt.value +='.'">.</span>
+        <span
+          class="num"
+          onclick="document.calc.txt.value +=eval(calc.txt.value)"
+          >=</span
+        >
+        <span class="num plus" onclick="document.calc.txt.value +='+'">+</span>
+      </form>
+    </div>
     <script src="JS/calculator.js"></script>
   </body>
 </html>
